# athena_client

./: .gitignore  .replit  BACKWARDS_COMPATIBILITY.md  CONCEPT_EXPLORATION_GUIDE.md  CONTRIBUTING.md  Makefile  PACKAGING_ISSUES_ANALYSIS.md  README.md  TESTING.md  pyproject.toml  setup.py  test_compatibility.py  test_enhanced_search.py  test_limits.py  test_url.py
.github/workflows/: ci.yml  publish.yml
athena_client/: __init__.py  async_client.py  auth.py  cli.py  client.py  concept_explorer.py  concept_set.py  exceptions.py  http.py  query.py  search_result.py  settings.py
athena_client/db/: base.py  sqlalchemy_connector.py
athena_client/models/: __init__.py
athena_client/utils/: __init__.py  optional_deps.py  user_agents.py
examples/: bigquery_concept_set_demo.py  concept_exploration_demo.py  concept_graph_networkx.py  demo.py  graph_demo.py  server_configuration_demo.py  simple_demo.py  simple_usage_demo.py
output/: files_content.md
tests/: conftest.py  test_async_client.py  test_auth.py  test_cli.py  test_client.py  test_concept_exploration_limits.py  test_concept_explorer.py  test_concept_set.py  test_enhanced_search.py  test_exceptions.py  test_http.py  test_installation_methods.py  test_models.py  test_packaging.py  test_query.py  test_search_result.py
tests/benchmarks/: test_orjson.py
tests/db/: test_sqlalchemy_connector.py
tests/property/: test_query_builder.py
